log
Fri, May 16, 2025 11:23:07 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025 11:38:41 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:69:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(list, copy(n));
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
dc46645
Fri, May 16, 2025 11:41:02 AM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(list, adjNode);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
eaac211
Fri, May 16, 2025 11:45:47 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9ac689b
Fri, May 16, 2025 11:47:21 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d5ef698
Fri, May 16, 2025 11:50:03 AM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
8cce9d1
Fri, May 16, 2025 11:53:39 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b27ee32
Fri, May 16, 2025 11:57:24 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
28d53ad
Fri, May 16, 2025 11:59:51 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
32cb6af
Fri, May 16, 2025 12:04:13 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
a9c785b
Fri, May 16, 2025 12:07:42 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
33b5acd
Fri, May 16, 2025 12:11:42 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
2b85ce9
Fri, May 16, 2025 12:14:22 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb39522
Fri, May 16, 2025 12:14:43 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bc83c63
Fri, May 16, 2025 12:15:14 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c0df326
Fri, May 16, 2025 12:16:01 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
244aeb8
Fri, May 16, 2025 12:17:21 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
c4196b8
Fri, May 16, 2025 12:20:52 PM: 
 sudoku.c | 75 +++++++++++++++++++++++++++++++++++++++++++++++++++-------------
 1 file changed, 60 insertions(+), 15 deletions(-)
 tests:  6|2
total_score: 45/70
29ec37d
